# utt

./: .gitignore  .pylintrc  CHANGELOG.md  CHANGES  MANIFEST.in  Makefile  Makefile.circleci  Pipfile  README.md  gumlog.sh  notes.txt  poetry.lock.bak  pyproject.toml  run  setup.py  ulog  ulog.sh
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: publish.yml  pull_request.yml
bash/: utt
docs/: CONTRIBUTING.md  DEVELOPMENT.md  HACKING.md  PLUGINS.md
integration/: Dockerfile.template  Makefile
integration/data/: utt-1.stdout
integration/py2/: Dockerfile
integration/py3/: Dockerfile
lib/yapf-0.16.1.dist-info/: DESCRIPTION.rst  METADATA  RECORD  metadata.json
patches/: 0001-fix-parse_absolute_date_error-Exit-if-wrong-date-for.patch
scripts/: publish.py  update_version_in_pyproject.py  update_version_txt.py
test/: test_report.py
test/data/: utt-1.stdout
test/integration/: Dockerfile  Dockerfile.py2  Dockerfile.py3  Dockerfile.template  Makefile
test/integration/data/: utt-1.stdout  utt-change-timezone.stdout  utt-error-invalid-date.stderr  (+22 more)
test/unit/: ddt.py  test_entry.py  test_midnight.py  test_parse_date.py  test_report.py
unit/: test_entry.py
utt/: __init__.py  __main__.py  __version__.py  activities.py  activity.py  add_entry.py  check_python_version.py  cmd_add.py  cmd_edit.py  cmd_hello.py  cmd_report.py  cmd_stretch.py  command.py  config.py  config_dirname.py  config_filename.py  constants.py  container.py  data_dirname.py  data_filename.py  default_config.py  entries.py  entry.py  entry_parser.py  exceptions.py  fromisocalendar.py  io.py  ioc.py  local_timezone.py  log_parser.py  log_repo.py  main.py  name.py  now.py  parse_args.py  print_report.py  report.py  timezone_config.py  tzoffset.py  util.py
utt/api/: __init__.py  _v1.py
utt/cmd_report/: __init__.py  template.py
utt/commands/: __init__.py  add.py  config.py  edit.py  hello.py  report.py  stretch.py
utt/components/: activities.py  add_entry.py  commands.py  config.py  config_dirname.py  config_filename.py  data_dirname.py  data_filename.py  default_config.py  entries.py  entry_lines.py  entry_parser.py  local_timezone.py  now.py  output.py  parse_args.py  report_args.py  report_model.py  report_view.py  timezone_config.py  utt_error.py
utt/data_structures/: activity.py  entry.py  name.py
utt/plugins/: 0_add.py  0_config.py  0_default_report_view.py  0_edit.py  0_hello.py  0_project_summary.py  0_report.py  0_stretch.py  add.py  config.py  edit.py  hello.py  report.py  stretch.py
utt/report/: __init__.py  activities_section.py  common.py  csv_view.py  details_section.py  formatter.py  model.py  per_day_section.py  print_report.py  projects_per_day_section.py  projects_section.py  summary_section.py  transform_activities.py  view.py
(+35 files in other folders)
