[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.poetry]
authors = ["Mathieu Larose <mathieu@mathieularose.com>"]
description = "A simple command-line time tracker"
homepage = "https://github.com/larose/utt"
license = "GPL-3.0-only"
maintainers = ["Mathieu Larose <mathieu@mathieularose.com>"]
name = "utt"
version = "0" # Do not change. Updated by a script.

[tool.poetry.dependencies]
argcomplete = "1.11.1"
python = "^3.7"
python_dateutil = "2.8.1"
pytz = "2019.3"
tzlocal = "2.0.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
ddt = "==1.2.2"
flake8 = "^3.7.9"
isort = "^4.3.21"
mypy = "^0.770"
pytest = "^5.2"
requests = "^2.23.0"

[tool.poetry.scripts]
utt = "utt.__main__:main"
