[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.pyright]
typeCheckingMode = "standard"

[tool.poetry]
authors = ["Mathieu Larose <mathieu@mathieularose.com>"]
description = "A simple command-line time tracker"
homepage = "https://github.com/larose/utt"
license = "GPL-3.0-only"
maintainers = ["Mathieu Larose <mathieu@mathieularose.com>"]
name = "utt"
version = "0"                                                # Do not change. Updated by a script.

[tool.poetry.dependencies]
argcomplete = "^3.2.1"
cargo = "^0.3"
python = "^3.10"

[tool.poetry.scripts]
utt = "utt.__main__:main"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
pyright = "^1.1.407"
requests = "^2.32.5"
setuptools = "^80.9.0"
